<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".EditData">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:background="@color/dark_grey"
        android:theme="?actionBarTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/Edit_App"
            android:textColor="@color/purple_500"
            android:textSize="39sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="35sp"
            android:backgroundTint="@color/purple_500"
            android:gravity="center_vertical"
            android:onClick="saveNote"
            android:layout_marginBottom="15sp"
            android:text="@string/Saving"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/Title_Edit"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/Title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        style="@style/TEXT"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/Description_Edit"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:layout_gravity="center"/>
    <EditText
        android:id="@+id/Description"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:maxLines="3"
        style="@style/TEXT"
        android:shadowColor="@color/black"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:layout_gravity="center"
        android:onClick="deleteNote"
        android:text="@string/Delete"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>